data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2400.wast
;; 10. **Test 10: Stack Polymorphism with Deep Function Calls**    - Description: Use deep function calls followed by `br_table` within a complex control flow and validate if the stack polymorphism rule is adhered to.    - Constraint Checked: Stack operation and polymorphism following deep nested function calls and `br_table`.    - Improper Function Call or Return Handling: Verifying the correctness of stack polymorphism, ensuring all deep function calls are properly unwound and managed before branching.

(assert_invalid
  (module
    (func $test_func
      (block $outer (result i32)
        (call $inner_func)
        (i32.const 1)
        (block $middle (result i32)
          (call $inner_func)
          (br_table $outer $middle $outer (local.get 0))
        )
      )
    )
    (func $inner_func
      (block
        (loop
          (br_if 0 (i32.const 0))
          (return)
        )
      )
    )
  )
  "type mismatch"
)